--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "N/A",
     "require": {
         "php": "~7.1.3||~7.2.0",
+        "magento/framework": "*",
         "scriptua/magento2-base": "~2.0.0"
     },
     "type": "magento2-module",
@@ -15,5 +16,11 @@
         "psr-4": {
             "Hryvinskyi\\DeferJs\\": ""
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://repo.magento.com/"
+        }
+    ]
 }
