--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "require": {
         "php": "~7.1.3||~7.2.0",
         "magento/framework": "*",
+        "magento/module-store": "*",
         "scriptua/magento2-base": "~2.0.0"
     },
     "type": "magento2-module",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "license": "GPL-3.0-or-later",
     "autoload": {
         "files": [
