--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
     "name": "hryvinskyi/magento2-deferjs",
     "description": "N/A",
     "require": {
-        "php": "~7.1.3||~7.2.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": "*",
         "magento/module-store": "*",
         "phpunit/phpunit": "~6.5.0",
         "scriptua/magento2-base": "~2.0.0"
     },
     "type": "magento2-module",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "license": "GPL-3.0-or-later",
     "autoload": {
         "files": [
