--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "type": "magento2-module",
     "version": "1.1.5",
-    "license": "GPL-3.0-or-later",
+    "license": "MIT",
     "autoload": {
         "files": [
             "registration.php"
