--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": "*",
         "magento/module-store": "*",
-        "phpunit/phpunit": "~6.5.0",
         "scriptua/magento2-base": "~2.0.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~6.5.0"
+    },
     "type": "magento2-module",
-    "version": "1.1.5",
+    "version": "1.1.6",
     "license": "MIT",
     "autoload": {
         "files": [
