--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
         "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": "*",
         "magento/module-store": "*",
-        "scriptua/magento2-base": "~2.0.0"
+        "hryvinskyi/magento2-base": "~2.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.5.0"
     },
     "type": "magento2-module",
-    "version": "1.1.6",
+    "version": "1.1.7",
     "license": "MIT",
     "autoload": {
         "files": [
