--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hryvinskyi/magento2-deferjs",
     "description": "N/A",
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.0",
         "magento/framework": "*",
         "magento/module-store": "*",
         "hryvinskyi/magento2-base": "~2.1.0"
@@ -11,7 +11,7 @@
         "phpunit/phpunit": "~6.5.0"
     },
     "type": "magento2-module",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "license": "MIT",
     "autoload": {
         "files": [
